# app/Http/Controllers/Swagger/MainController.php
@@ -8,10 +8,16 @@ use Illuminate\Http\Request;
 
 /**
  *
- * @OA\Info(title="Laravel Swagger", version="1.0.0"),
+ * @OA\Info(title="Api Documentation", version="1.0.0"),
  *  @OA\PathItem(path="/api")
  *
- *
+ *  @OA\Components(
+ *     @OA\SecurityScheme(
+ *          securityScheme="bearerAuth",
+ *          type="http",
+ *          scheme="bearer"
+ *     )
+ *  )
  */
 class MainController extends Controller
 {
